# ADSync

./: .gitignore  LICENSE  README.md  pyproject.toml
sample_data/: README.md
src/adsync/: __init__.py  __main__.py  _pipeline.py  cli.py  config.py  logging.py  models.py
src/adsync/align/: anchors.py  candidate_lattice.py  confidence.py  drift.py  global_offset.py  piecewise_map.py  warp_decode.py  warp_fit.py
src/adsync/features/: extract_advanced.py  extract_basic.py  load.py  preprocess.py
src/adsync/media/: extract.py  mux.py  probe.py  segments.py
src/adsync/rebuild/: export.py  retime.py  stitch.py  warp_render.py
src/adsync/report/: json_report.py  plots.py
src/adsync/utils/: io.py  mathx.py  subprocesses.py  tempdir.py
tests/: test_cli.py  test_drift.py  test_mathx.py  test_offset.py  test_piecewise.py  test_probe.py
