[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adsync"
version = "0.1.0"
description = "Synchronize audio description tracks with video files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9,<1.0",
    "pydantic>=2.0,<3.0",
    "librosa>=0.10,<1.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<2.0",
    "soundfile>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "matplotlib>=3.7,<4.0",
]

[project.scripts]
adsync = "adsync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
